--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.4"
+  },
+  "dependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
